Menu Alignment Fix

--- a/sass/include/_nav.scss
+++ b/sass/include/_nav.scss
@@ -55,7 +55,7 @@ nav {
       color: var(--a3);
     }
   }
-  h1, h2, div ul {
+  h1 {
     margin-bottom: 0;
     margin-top: 0.2rem;
   }
