--- a/sass/include/_zola.scss
+++ b/sass/include/_zola.scss
@@ -1,4 +1,4 @@
-.sum {margin: 0.2rem 0}
+.sum {margin: .2rem 0}
 .s95 {font-size: .95rem}
 .s90 {font-size: .90rem}
 .s85 {font-size: .85rem}
